--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "build-win": "electron-builder --win",
     "build": "electron-builder"
   },
-  "devDependencies": {
-    "@electron/rebuild": "^3.7.2",
-    "electron": "30.0.0",
-    "electron-builder": "24.0.0"
-  },
+"devDependencies": {
+  "@electron/rebuild": "3.2.13",
+  "electron": "30.0.0",
+  "electron-builder": "24.6.4"
+},
   "dependencies": {
     "csv-parse": "5.0.0",
     "express": "4.18.0"
